--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
+<!doctype html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
-  <script language="javascript" type="text/javascript" src="sketch.js"></script>
-  <script language="javascript" type="text/javascript" src="blackhole.js"></script>
-  <script language="javascript" type="text/javascript" src="photon.js"></script>
-  <style> body {padding: 0; margin: 0;} </style>
-</head>
-
-<body>
-</body>
+    <head>
+      <meta charset="UTF-8">    
+      <script language="javascript" type="text/javascript" src="vert.js"></script>
+      <script language="javascript" type="text/javascript" src="frag.js"></script>
+      <style> body {padding: 0; margin: 0;} </style>
+    </head>
+    
+   <body>
+      <canvas width = "400" height = "400" id = "my_Canvas"></canvas>
+      <script language="javascript" type="text/javascript" src="script.js"></script>
+   </body>
 </html>
