--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
       <meta charset="UTF-8">    
       <script language="javascript" type="text/javascript" src="vert.js"></script>
       <script language="javascript" type="text/javascript" src="frag.js"></script>
-      <style> body {padding: 0; margin: 0;} </style>
+      <script language="javascript" type="text/javascript" src="script.js"></script>
     </head>
     
    <body>
       <canvas width = "400" height = "400" id = "my_Canvas"></canvas>
-      <script language="javascript" type="text/javascript" src="script.js"></script>
+      <body onmousemove='moveCamera(event)' onload='main(event)'> 
    </body>
 </html>
